; ModuleID = '/home/carl/AnghaBench/disque/src/extr_anet.c_anetListen.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_anet.c_anetListen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"bind: %s\00", align 1
@errno = common dso_local global i32 0, align 4
@ANET_ERR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"listen: %s\00", align 1
@ANET_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, %struct.sockaddr*, i32, i32)* @anetListen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @anetListen(i8* %0, i32 %1, %struct.sockaddr* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.sockaddr*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store %struct.sockaddr* %2, %struct.sockaddr** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %8, align 4
  %13 = load %struct.sockaddr*, %struct.sockaddr** %9, align 8
  %14 = load i32, i32* %10, align 4
  %15 = call i32 @bind(i32 %12, %struct.sockaddr* %13, i32 %14)
  %16 = icmp eq i32 %15, -1
  br i1 %16, label %17, label %25

17:                                               ; preds = %5
  %18 = load i8*, i8** %7, align 8
  %19 = load i32, i32* @errno, align 4
  %20 = call i32 @strerror(i32 %19)
  %21 = call i32 @anetSetError(i8* %18, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %20)
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @close(i32 %22)
  %24 = load i32, i32* @ANET_ERR, align 4
  store i32 %24, i32* %6, align 4
  br label %40

25:                                               ; preds = %5
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* %11, align 4
  %28 = call i32 @listen(i32 %26, i32 %27)
  %29 = icmp eq i32 %28, -1
  br i1 %29, label %30, label %38

30:                                               ; preds = %25
  %31 = load i8*, i8** %7, align 8
  %32 = load i32, i32* @errno, align 4
  %33 = call i32 @strerror(i32 %32)
  %34 = call i32 @anetSetError(i8* %31, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %33)
  %35 = load i32, i32* %8, align 4
  %36 = call i32 @close(i32 %35)
  %37 = load i32, i32* @ANET_ERR, align 4
  store i32 %37, i32* %6, align 4
  br label %40

38:                                               ; preds = %25
  %39 = load i32, i32* @ANET_OK, align 4
  store i32 %39, i32* %6, align 4
  br label %40

40:                                               ; preds = %38, %30, %17
  %41 = load i32, i32* %6, align 4
  ret i32 %41
}

declare dso_local i32 @bind(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @anetSetError(i8*, i8*, i32) #1

declare dso_local i32 @strerror(i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @listen(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
